# zvote

./: .gitignore  LICENSE  README.md  go-java.sh  go-spacetime.sh  go.sh  zvote-results-3-2025-09-28.json
client/: .env.example  .gitignore  package-lock.json  package.json  vite.config.ts
client/src/: main.tsx  style.css
clients/web/: .env.example  config.ts  package.json  vite.config.ts
docs/: ARCHITECTURE.md  AUTHENTICATION.md  AUTH_README.md  AUTH_SETUP_GUIDE.md  DUAL_BACKEND_STRATEGY.md  QUICK_START.md  SCRIPTS_OVERVIEW.md
docs/client/: BACKEND_SWITCHING.md  BUILD_TIME_BACKENDS.md  CLIENT_ABSTRACTION_STRATEGY.md  CONFIG.md  README.md  USAGE_EXAMPLES.md  approval-live-counts.md  cast-vote-approval.md  cast-vote-majority-judgment.md  create-private-vote.md  create-public-vote.md  create-unlisted-vote.md  create-vote-form.md  discover-votes-by-country-and-origin.md  discover-votes-by-country.md  discover-votes-by-language.md  discover-votes-by-location.md  majority-judgment-graphs.md  majority-judgment-tie-breaking.md  my-votes-list.md  open-vote-by-link.md  (+7 more)
proto1/: PROTO1.md  build_client.sh  build_db_module.sh  go.sh  run_client_preview.sh  start_and_publish_db.sh  test.sh
proto1/server/: Cargo.toml
proto1/server/src/: approval.rs  judgment.rs  lib.rs  utils.rs  vote.rs  vote_access.rs
scripts/: build_and_run_client.sh  build_and_run_client_java.sh  build_and_run_client_spacetime.sh  build_stbd_module.sh  start_java_server.sh  start_stdb_and_publish_module.sh  stop_stdb.sh  test_stdb_module.sh
server/: Cargo.toml
stories/: stories.md
(+182 files in other folders)
