[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "1.4.0", features = ["unstable"] }
log = "0.4"
blake3 = "1.5"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
